--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,23 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/framerusercontent.com/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/fonts.gstatic.com/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
